# xNVMe

./: .clangd  Makefile  meson.build  meson_options.txt
.github/workflows/: verify.yml
.reuse/: dep5
docs/autogen/: apigen.py  doxy.cfg
docs/tutorial/fabrics/: fabrics_env.sh  fabrics_initiator_nvmecli.sh  fabrics_target_linux.sh  fabrics_target_spdk.sh
emitter/: Makefile
examples/: meson.build
include/: libxnvme.h  libxnvme_fabrics.h  libxnvme_fabrics_tcp.h  meson.build  xnvme_be_fbsd.h
lib/: libxnvme.map  meson.build  xnvme_be_fbsd.c  xnvme_fabrics.c  xnvme_fabrics_tcp.c
man/: meson.build  xnvme_file-copy-async.1  xnvme_file-copy-sync.1  xnvme_file-dump-async-iovec.1  xnvme_file-dump-async.1  xnvme_file-dump-sync-iovec.1  xnvme_file-dump-sync.1  xnvme_file-load-async.1  xnvme_file-load-sync.1  xnvme_file-write-read.1  xnvme_file.1  xnvme_hello-hw.1  xnvme_hello.1  xnvme_io_async-read.1  xnvme_io_async-write.1  xnvme_io_async.1  xnvme_tests_async_intf-init_term.1  xnvme_tests_async_intf.1  xnvme_tests_buf-buf_alloc_free.1  xnvme_tests_buf-buf_virt_alloc_free.1  xnvme_tests_buf.1  xnvme_tests_cli-optional.1  xnvme_tests_cli.1  xnvme_tests_enum-backend.1  xnvme_tests_enum-multi.1  xnvme_tests_enum-open.1  xnvme_tests_enum.1  xnvme_tests_ioworker-verify-sync.1  xnvme_tests_ioworker-verify.1  xnvme_tests_ioworker.1  xnvme_tests_kvs-kvs_io.1  xnvme_tests_kvs.1  xnvme_tests_lblk-io.1  xnvme_tests_lblk-scopy.1  xnvme_tests_lblk-write_uncorrectable.1  xnvme_tests_lblk-write_zeroes.1  xnvme_tests_lblk.1  xnvme_tests_scc-idfy.1  xnvme_tests_scc-scopy-msrc.1  xnvme_tests_scc-scopy.1  (+20 more)
pkgs/: .gitignore  README.rst
pkgs/deb/: packetize.py
pkgs/deb/debian/: changelog  control  libxnvme-dev.install  rules  xnvme-cli.install
scripts/: print_help.py
tests/: meson.build
toolbox/: pconf_replace.py
toolbox/bash_completion.d/: meson.build
toolbox/cijoe-pkg-xnvme/src/cijoe/xnvme/configs/: default.config
toolbox/cijoe-pkg-xnvme/src/cijoe/xnvme/tests/: conftest.py
toolbox/cijoe-pkg-xnvme/src/cijoe/xnvme/tests/tools/: test_xnvme.py
toolbox/pkgs/: alpine-latest-build.sh  archlinux-latest-build.sh  archlinux-latest.sh  centos-stream8.sh  centos-stream9.sh  debian-bullseye.sh  default-build.sh  fedora-36.sh  fedora-38.sh  gentoo-latest-build.sh  gentoo-latest.sh  opensuse-leap-15.4.sh  opensuse-tumbleweed-latest.sh  ubuntu-jammy.sh  ubuntu-lunar.sh
toolbox/pkgs/emitter/: deps.yaml
toolbox/pkgs/emitter/templates/: src-spdk.sh.jinja
tools/: meson.build  xnvme_fabrics_tcp.c
tools/fio-engine/: meson.build  xnvme_fioe.c
